fix: dark mode CSS override

--- a/index.html
+++ b/index.html
@@ -43,6 +43,104 @@
             stroke-width: 1.5;
         }
     </style>
+
+    <style id="dark-mode-styles">
+      .dark, .dark body {
+        background-color: #0f1117 !important;
+        color: #e2e8f0 !important;
+      }
+      /* Nav */
+      .dark nav {
+        background: rgba(10,12,18,0.9) !important;
+        border-color: #1e2535 !important;
+      }
+      /* All white backgrounds */
+      .dark [class*="bg-white"] {
+        background-color: #161a24 !important;
+      }
+      /* Gray backgrounds */
+      .dark [class*="bg-gray-50"] {
+        background-color: #0f1117 !important;
+      }
+      .dark [class*="bg-gray-100"] {
+        background-color: #1a1f2e !important;
+      }
+      /* Text colors */
+      .dark [class*="text-gray-900"] {
+        color: #f1f5f9 !important;
+      }
+      .dark [class*="text-gray-800"] {
+        color: #e2e8f0 !important;
+      }
+      .dark [class*="text-gray-700"] {
+        color: #cbd5e1 !important;
+      }
+      .dark [class*="text-gray-600"] {
+        color: #94a3b8 !important;
+      }
+      .dark [class*="text-gray-500"] {
+        color: #64748b !important;
+      }
+      .dark [class*="text-gray-400"] {
+        color: #475569 !important;
+      }
+      /* Borders */
+      .dark [class*="border-gray-100"],
+      .dark [class*="border-gray-200"] {
+        border-color: #1e2535 !important;
+      }
+      /* Inputs */
+      .dark input, .dark textarea, .dark select {
+        background-color: #0f1117 !important;
+        color: #e2e8f0 !important;
+        border-color: #1e2535 !important;
+      }
+      .dark input::placeholder, .dark textarea::placeholder {
+        color: #475569 !important;
+      }
+      /* Hero gradient */
+      .dark .hero-bg {
+        background-image:
+          radial-gradient(at 0% 0%, hsla(217,40%,8%,1) 0px, transparent 50%),
+          radial-gradient(at 100% 0%, hsla(210,40%,6%,1) 0px, transparent 50%),
+          radial-gradient(at 100% 100%, hsla(217,40%,8%,0.5) 0px, transparent 50%) !important;
+        background-color: #0f1117 !important;
+      }
+      /* Cards / sections */
+      .dark [class*="shadow"] {
+        box-shadow: 0 4px 24px rgba(0,0,0,0.4) !important;
+      }
+      .dark [class*="bg-blue-50"] {
+        background-color: rgba(37,99,235,0.1) !important;
+      }
+      .dark [class*="bg-purple-50"] {
+        background-color: rgba(124,58,237,0.1) !important;
+      }
+      .dark [class*="bg-pink-50"] {
+        background-color: rgba(236,72,153,0.1) !important;
+      }
+      .dark [class*="bg-orange-50"] {
+        background-color: rgba(234,88,12,0.1) !important;
+      }
+      /* Footer */
+      .dark footer {
+        background-color: #080e1a !important;
+        border-color: #1e2535 !important;
+      }
+      /* Theme button */
+      .dark #theme-btn {
+        border-color: #1e2535 !important;
+        color: #94a3b8 !important;
+      }
+      /* Contact tooltip bg */
+      .dark .contact-tooltip {
+        background: #0f1117 !important;
+        border: 1px solid #1e2535;
+      }
+      .dark .contact-tooltip::after {
+        border-top-color: #0f1117 !important;
+      }
+    </style>
 </head>
 <body class="text-gray-900 antialiased selection:bg-blue-100 selection:text-blue-900 relative">
 
@@ -578,3 +676,42 @@
 
     <!-- Chat Widget Visual Placeholder -->
     <div class="fixed bottom-6 right-6 w-12 h-12 bg-blue-600 rounded-full shadow-lg shadow-blue-600/20 flex items-center justify-center text-white cursor-pointer hover:bg-blue-700 hover:scale
+    </div>
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>tailwind.config = { darkMode: 'class' }</script>
+
+    <script>
+    // ===== DARK MODE =====
+    function toggleTheme() {
+        const html = document.documentElement;
+        const isDark = html.classList.toggle('dark');
+        document.getElementById('theme-icon').setAttribute('icon', isDark ? 'solar:moon-linear' : 'solar:sun-linear');
+        localStorage.setItem('theme', isDark ? 'dark' : 'light');
+    }
+
+    // ===== LANGUAGE =====
+    function setLang(lang) {
+        const activeClass = 'px-3 py-1 rounded-full bg-white shadow-sm text-xs font-medium text-gray-900 transition-all';
+        const inactiveClass = 'px-3 py-1 rounded-full text-xs font-medium text-gray-500 hover:text-gray-900 transition-all';
+        document.getElementById('btn-en').className = lang === 'en' ? activeClass : inactiveClass;
+        document.getElementById('btn-vi').className = lang === 'vi' ? activeClass : inactiveClass;
+        document.querySelectorAll('[data-en][data-vi]').forEach(el => {
+            el.textContent = lang === 'vi' ? el.getAttribute('data-vi') : el.getAttribute('data-en');
+        });
+        localStorage.setItem('lang', lang);
+    }
+
+    // ===== INIT =====
+    (function() {
+        if (localStorage.getItem('theme') === 'dark') {
+            document.documentElement.classList.add('dark');
+            const icon = document.getElementById('theme-icon');
+            if (icon) icon.setAttribute('icon', 'solar:moon-linear');
+        }
+        if (localStorage.getItem('lang') === 'vi') setLang('vi');
+    })();
+    </script>
+
+</body>
+</html>
