update: sync contact icons style

--- a/index.html
+++ b/index.html
@@ -480,11 +480,11 @@
                         .contact-item:hover .contact-tooltip { opacity: 1; }
                     </style>
 
-                    <div class="flex flex-wrap gap-3 pt-2">
+                    <div class="flex flex-wrap gap-2 pt-2">
                         <!-- Email -->
                         <div class="contact-item">
                             <a href="mailto:sockhanh4425@gmail.com"
-                               class="w-11 h-11 rounded-xl bg-red-50 border border-red-100 flex items-center justify-center text-red-500 hover:bg-red-500 hover:text-white hover:border-red-500 transition-all">
+                               class="w-11 h-11 rounded-2xl bg-gray-100 border border-gray-200 flex items-center justify-center transition-all hover:scale-110 hover:shadow-md">
                                 <iconify-icon icon="logos:google-gmail" class="text-xl"></iconify-icon>
                             </a>
                             <span class="contact-tooltip">sockhanh4425@gmail.com</span>
@@ -493,8 +493,8 @@
                         <!-- Phone -->
                         <div class="contact-item">
                             <a href="tel:+84919797671"
-                               class="w-11 h-11 rounded-xl bg-green-50 border border-green-100 flex items-center justify-center text-green-600 hover:bg-green-500 hover:text-white hover:border-green-500 transition-all">
-                                <iconify-icon icon="solar:phone-bold" class="text-xl"></iconify-icon>
+                               class="w-11 h-11 rounded-2xl bg-gray-100 border border-gray-200 flex items-center justify-center transition-all hover:scale-110 hover:shadow-md">
+                                <iconify-icon icon="logos:google-maps" class="text-xl"></iconify-icon>
                             </a>
                             <span class="contact-tooltip">(+84) 919 797 671</span>
                         </div>
@@ -502,7 +502,7 @@
                         <!-- Facebook -->
                         <div class="contact-item">
                             <a href="https://www.facebook.com/nguyen.quoc.khanh.202138/" target="_blank"
-                               class="w-11 h-11 rounded-xl bg-blue-50 border border-blue-100 flex items-center justify-center hover:bg-blue-600 hover:text-white hover:border-blue-600 transition-all">
+                               class="w-11 h-11 rounded-2xl bg-gray-100 border border-gray-200 flex items-center justify-center transition-all hover:scale-110 hover:shadow-md">
                                 <iconify-icon icon="logos:facebook" class="text-xl"></iconify-icon>
                             </a>
                             <span class="contact-tooltip">Facebook</span>
@@ -511,7 +511,7 @@
                         <!-- Zalo -->
                         <div class="contact-item">
                             <a href="https://zalo.me/0919797671" target="_blank"
-                               class="w-11 h-11 rounded-xl bg-sky-50 border border-sky-100 flex items-center justify-center hover:bg-sky-500 hover:text-white hover:border-sky-500 transition-all overflow-hidden">
+                               class="w-11 h-11 rounded-2xl bg-gray-100 border border-gray-200 flex items-center justify-center transition-all hover:scale-110 hover:shadow-md overflow-hidden">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Icon_of_Zalo.svg" class="w-6 h-6" alt="Zalo"/>
                             </a>
                             <span class="contact-tooltip">Zalo: 0919 797 671</span>
@@ -520,7 +520,7 @@
                         <!-- Telegram -->
                         <div class="contact-item">
                             <a href="https://t.me/+84919797671" target="_blank"
-                               class="w-11 h-11 rounded-xl bg-sky-50 border border-sky-100 flex items-center justify-center hover:bg-sky-400 hover:text-white hover:border-sky-400 transition-all">
+                               class="w-11 h-11 rounded-2xl bg-gray-100 border border-gray-200 flex items-center justify-center transition-all hover:scale-110 hover:shadow-md">
                                 <iconify-icon icon="logos:telegram" class="text-xl"></iconify-icon>
                             </a>
                             <span class="contact-tooltip">Telegram: +84 919 797 671</span>
@@ -529,16 +529,16 @@
                         <!-- WhatsApp -->
                         <div class="contact-item">
                             <a href="https://wa.me/84919797671" target="_blank"
-                               class="w-11 h-11 rounded-xl bg-green-50 border border-green-100 flex items-center justify-center hover:bg-green-500 hover:text-white hover:border-green-500 transition-all">
+                               class="w-11 h-11 rounded-2xl bg-gray-100 border border-gray-200 flex items-center justify-center transition-all hover:scale-110 hover:shadow-md">
                                 <iconify-icon icon="logos:whatsapp-icon" class="text-xl"></iconify-icon>
                             </a>
                             <span class="contact-tooltip">WhatsApp: +84 919 797 671</span>
                         </div>
 
-                        <!-- Location (no link, just info) -->
+                        <!-- Location -->
                         <div class="contact-item">
-                            <div class="w-11 h-11 rounded-xl bg-orange-50 border border-orange-100 flex items-center justify-center text-orange-500 cursor-default">
-                                <iconify-icon icon="solar:map-point-bold" class="text-xl"></iconify-icon>
+                            <div class="w-11 h-11 rounded-2xl bg-gray-100 border border-gray-200 flex items-center justify-center cursor-default transition-all hover:scale-110">
+                                <iconify-icon icon="logos:google-maps" class="text-xl"></iconify-icon>
                             </div>
                             <span class="contact-tooltip">Ho Chi Minh City, Vietnam</span>
                         </div>
